<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fod_interface</name>
  <version>0.1.0</version>
  <description>TODO: Package description</description>
  <maintainer email="36081189@qq.com">guo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>autoware_control_msgs</depend>
  <depend>autoware_vehicle_info_utils</depend>
  <depend>autoware_vehicle_msgs</depend>
  <depend>can_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>ros2_socketcan_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tier4_api_msgs</depend>
  <depend>tier4_api_utils</depend>
  <depend>tier4_debug_msgs</depend>
  <depend>tier4_external_api_msgs</depend>
  <depend>tier4_vehicle_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
